// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Car opens modal 1`] = `
<body>
  <div>
    <table>
      <tbody>
        <tr
          data-testid="table-row"
        >
          <td
            class="success clickableCell"
          >
            <button
              class="cellButton"
              style="min-height: 0;"
              type="button"
            >
              <span
                class="glyphicon glyphicon-star"
                data-testid="StarIcon"
              />
              <span>
                 
              </span>
              Mazda Cup
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    id="modal-cars-105"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; display: block; inset: 0; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        class="Modal__Bootstrap modal-dialog modal-lg"
        data-testid="modal-cars-105"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                class="glyphicon glyphicon-remove"
              />
            </button>
            <h4
              class="modal-title"
            >
              Cars for Mazda Cup
            </h4>
          </div>
          <div
            class="modal-body"
            style="max-height: 55vh; overflow-y: auto;"
          >
            <div
              class="container-fluid"
            >
              <div
                class="table-responsive"
              >
                <table
                  class="table"
                  style="font-size: 0.8em;"
                >
                  <thead>
                    <tr>
                      <th>
                        Car
                      </th>
                    </tr>
                  </thead>
                  <tbody />
                </table>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/columns/Car opens modal 2`] = `
<body>
  <div>
    <table>
      <tbody>
        <tr
          data-testid="table-row"
        >
          <td
            class="success clickableCell"
          >
            <button
              class="cellButton"
              style="min-height: 0;"
              type="button"
            >
              <span
                class="glyphicon glyphicon-star"
                data-testid="StarIcon"
              />
              <span>
                 
              </span>
              Mazda Cup
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    id="modal-cars-105"
  />
</body>
`;

exports[`components/columns/Car renders correctly 1`] = `
<td
  class="clickableCell"
>
  <button
    class="cellButton"
    style="min-height: 0;"
    type="button"
  >
    <span>
       
    </span>
    Mazda Cup
  </button>
</td>
`;

exports[`components/columns/Car renders owned, favourite 1`] = `
<td
  class="success clickableCell"
>
  <button
    class="cellButton"
    style="min-height: 0;"
    type="button"
  >
    <span
      class="glyphicon glyphicon-star"
      data-testid="StarIcon"
    />
    <span>
       
    </span>
    Mazda Cup
  </button>
</td>
`;
